--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -107,3 +107,12 @@ spotiq_ten:
 
 soundcloud:
   - com.soundcloud.android/com.soundcloud.android.launcher.LauncherActivityOgIconAlias
+
+pixabay_foss:
+  - com.ahmadrezagh671.pixabay/com.ahmadrezagh671.pixabay.MainActivity
+
+polymarket_viewer:
+  - com.streamatico.polymarketviewer/com.streamatico.polymarketviewer.MainActivity
+
+deltachat:
+  - com.b44t.messenger/org.thoughtcrime.securesms.RoutingActivity
