--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -116,3 +116,33 @@ polymarket_viewer:
 
 deltachat:
   - com.b44t.messenger/org.thoughtcrime.securesms.RoutingActivity
+
+bettercounter:
+  - org.kde.bettercounter/org.kde.bettercounter.ui.main.MainActivity
+
+easyjet:
+  - com.mttnow.droid.easyjet/com.easyjet.travel.android.MainActivity
+
+john_gbc:
+  - com.johnemulators.johngbclite/com.johnemulators.activity.RomListActivity
+
+starbucks:
+  - com.starbucks.uk/com.starbucks.emea.app.splash.SplashActivity
+
+kfc:
+  - com.nanoequipment.kfc/com.nanoequipment.kfc.MainActivity
+
+burger_king:
+  - burgerking.com.br.appandroid/burgerking.com.br.appandroid.splash.presentation.SplashActivity
+
+formula_1:
+  - com.softpauer.f1timingapp2014.basic/com.formula1.MainActivity
+
+share_it:
+  - shareit.lite/com.lenovo.anyshare.ApMainActivity
+
+voyager_for_lemmy:
+  - app.vger.voyager/app.vger.voyager.space
+
+canta:
+  - io.github.samolego.canta/io.github.samolego.canta.MainActivity
