--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -146,3 +146,6 @@ voyager_for_lemmy:
 
 canta:
   - io.github.samolego.canta/io.github.samolego.canta.MainActivity
+
+duolingo:
+  - com.duolingo/com.duolingo.app.StreakFrozenLauncher1
