Add icon for E*TRADE

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+etrade:
+  - org.chromium.webapk.a6e9ba375c784b03e_v2/org.chromium.webapk.shell_apk.h2o.H2OOpaqueMainActivity
