--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -27,3 +27,15 @@ rhythm:
 
 vivi:
   - com.vivi.vivimusic/com.music.vivi.MainActivity
+
+flipkart:
+  - com.flipkart.android/com.flipkart.android.GoldIconAlias
+
+forkgram:
+  - org.forkgram.messenger/org.telegram.messenger.OriginalIcon
+
+lidl_plus:
+  - com.lidl.eci.lidlplus/es.lidlplus.i18n.StandardLauncher
+
+weawow:
+  - com.weawow/com.weawow.DefaultIcon
