Add icons&compinfo (#1219)
* add icons

* add componentinfo

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -15,3 +15,27 @@
 
 etrade:
   - org.chromium.webapk.a6e9ba375c784b03e_v2/org.chromium.webapk.shell_apk.h2o.H2OOpaqueMainActivity
+
+movieboxpro:
+  - com.movieboxpro.android/com.movieboxpro.android.view.activity.SplashActivity
+
+ob_wheel:
+  - com.quartertone.obwheeltwa/com.quartertone.obwheeltwa.MainActivity
+
+rhythm:
+  - chromahub.rhythm.app/chromahub.rhythm.app.MainActivity
+
+vivi:
+  - com.vivi.vivimusic/com.music.vivi.MainActivity
+
+flipkart:
+  - com.flipkart.android/com.flipkart.android.GoldIconAlias
+
+forkgram:
+  - org.forkgram.messenger/org.telegram.messenger.OriginalIcon
+
+lidl_plus:
+  - com.lidl.eci.lidlplus/es.lidlplus.i18n.StandardLauncher
+
+weawow:
+  - com.weawow/com.weawow.DefaultIcon
