add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -15,3 +15,12 @@
 
 incident_io:
   - com.incidentio.incidentio/com.incidentio.incidentio.MainActivity
+
+broken_sword_reforged:
+  - uk.co.revolution.bs1r.google/uk.co.revolution.bs1r.google.MainActivity
+
+erlebnis_zoo_hannover:
+  - de.zoo_hannover.app/de.zoo_hannover.app.MainActivity
+
+zotero:
+  - org.zotero.android/org.zotero.android.screens.root.RootActivity
