--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -24,3 +24,9 @@ erlebnis_zoo_hannover:
 
 zotero:
   - org.zotero.android/org.zotero.android.screens.root.RootActivity
+
+rikkahub:
+  - me.rerere.rikkahub/me.rerere.rikkahub.RouteActivity
+
+torrent_search:
+  - com.prajwalch.torrentsearch/com.prajwalch.torrentsearch.MainActivity
