--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,3 +30,6 @@ rikkahub:
 
 torrent_search:
   - com.prajwalch.torrentsearch/com.prajwalch.torrentsearch.MainActivity
+
+waifupx:
+  - galahad.waifu.walls/dev.jahir.frames.app.MainActivity
