Add icons&compinfo (#1224)
* add icons, premium request

* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -15,3 +15,21 @@
 
 incident_io:
   - com.incidentio.incidentio/com.incidentio.incidentio.MainActivity
+
+broken_sword_reforged:
+  - uk.co.revolution.bs1r.google/uk.co.revolution.bs1r.google.MainActivity
+
+erlebnis_zoo_hannover:
+  - de.zoo_hannover.app/de.zoo_hannover.app.MainActivity
+
+zotero:
+  - org.zotero.android/org.zotero.android.screens.root.RootActivity
+
+rikkahub:
+  - me.rerere.rikkahub/me.rerere.rikkahub.RouteActivity
+
+torrent_search:
+  - com.prajwalch.torrentsearch/com.prajwalch.torrentsearch.MainActivity
+
+waifupx:
+  - galahad.waifu.walls/dev.jahir.frames.app.MainActivity
