Add new compinfo for flipkart

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,6 @@ torrent_search:
 
 waifupx:
   - galahad.waifu.walls/dev.jahir.frames.app.MainActivity
+
+flipkart:
+  - com.flipkart.android/com.flipkart.android.SilverIconAlias
