add compinfos for sudoku apps

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,3 +36,7 @@ waifupx:
 
 flipkart:
   - com.flipkart.android/com.flipkart.android.SilverIconAlias
+
+open_sudoku:
+  - org.moire.opensudoku/org.moire.opensudoku.gui.screen.title.TitleScreenActivity
+  - com.easybrain.sudoku.android/com.easybrain.template.SplashActivity
