new compinfo: Image Toolbox

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -75,3 +75,6 @@ liketones_ukulele_tuner:
 liketones_violin_tuner:
   - com.sonkins.tviolin/com.sonkins.tviolin.MainActivity
   - com.sonkins.tviola/com.sonkins.tviola.MainActivity
+
+image_toolbox:
+  - ru.tech.imageresizershrinker/com.t8rin.imagetoolbox.app.presentation.AppActivity
