new icon: Pobeda 80

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -78,3 +78,6 @@ liketones_violin_tuner:
 
 image_toolbox:
   - ru.tech.imageresizershrinker/com.t8rin.imagetoolbox.app.presentation.AppActivity
+
+pobeda_80:
+  - com.pobeda.anniversary/com.pobeda.anniversary.MainActivity
