--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -36,3 +36,48 @@ waifupx:
 
 flipkart:
   - com.flipkart.android/com.flipkart.android.SilverIconAlias
+
+open_sudoku:
+  - org.moire.opensudoku/org.moire.opensudoku.gui.screen.title.TitleScreenActivity
+  - com.easybrain.sudoku.android/com.easybrain.template.SplashActivity
+
+liketones_banjo_tuner:
+  - com.sonkins.tbanjo/com.sonkins.tbanjo.MainActivity
+
+liketones_bass_tuner:
+  - com.sonkins.tbass/com.sonkins.tbass.MainActivity
+
+liketones_cello_tuner:
+  - com.sonkins.tcello/com.sonkins.tcello.MainActivity
+  - com.sonkins.tdoublebass/com.sonkins.tdoublebass.MainActivity
+
+liketones_clarinet_tuner:
+  - com.sonkins.tclarinet/com.sonkins.tclarinet.MainActivity
+
+liketones_flute_tuner:
+  - com.sonkins.tflute/com.sonkins.tflute.MainActivity
+
+liketones_guitar_tuner:
+  - com.sonkins.tguitar/com.sonkins.tguitar.MainActivity
+
+liketones_mandolin_tuner:
+  - com.sonkins.tmandolin/com.sonkins.tmandolin.MainActivity
+
+liketones_saxophone_tuner:
+  - com.sonkins.tsaxophone/com.sonkins.tsaxophone.MainActivity
+
+liketones_trumpet_tuner:
+  - com.sonkins.ttrumpet/com.sonkins.ttrumpet.MainActivity
+
+liketones_ukulele_tuner:
+  - com.sonkins.tukulele/com.sonkins.tukulele.MainActivity
+
+liketones_violin_tuner:
+  - com.sonkins.tviolin/com.sonkins.tviolin.MainActivity
+  - com.sonkins.tviola/com.sonkins.tviola.MainActivity
+
+image_toolbox:
+  - ru.tech.imageresizershrinker/com.t8rin.imagetoolbox.app.presentation.AppActivity
+
+pobeda_80:
+  - com.pobeda.anniversary/com.pobeda.anniversary.MainActivity
