--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -72,3 +72,15 @@ ya_habit_tracker:
 
 yeeemp:
   - art.pegasko.yeeemp/art.pegasko.yeeemp.ui.activity.QueueListActivity
+
+androoster:
+  - com.andreacioccarelli.androoster/com.andreacioccarelli.androoster.ui.boot.UIBoot
+
+caffeinate_foss:
+  - com.hifnawy.caffeinate/com.hifnawy.caffeinate.view.MainActivity
+
+comaps:
+  - app.comaps.fdroid/app.organicmaps.DownloadResourcesActivity
+
+xmp_mod_player:
+  - org.helllabs.android.xmp/org.helllabs.android.xmp.browser.PlaylistMenu
