--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -84,3 +84,41 @@ comaps:
 
 xmp_mod_player:
   - org.helllabs.android.xmp/org.helllabs.android.xmp.browser.PlaylistMenu
+
+mcdonalds:
+  - il.co.inmanage.mcdonalds/il.co.inmanage.mcdonalds.activities.StartupActivity
+
+microsoft_edge:
+  - com.microsoft.emmx/com.microsoft.ruby.Main6
+
+antutu_benchmark:
+  - com.antutu.ABenchMark/com.android.module.app.ui.start.ABenchMarkStart
+
+gta_san_andreas:
+  - com.rockstargames.gtasa.de/com.epicgames.ue4.GameActivity
+
+coingecko:
+  - com.coingecko.coingeckoapp/com.coingecko.coingeckoapp.MainActivityDusk
+
+duolingo:
+  - com.duolingo/com.duolingo.app.PreStreakSaver4Launcher
+  - com.duolingo/com.duolingo.app.PreStreakSaver3Launcher
+  - com.duolingo/com.duolingo.app.PreStreakSaver2Launcher
+
+seabank:
+  - id.co.bankbkemobile.digitalbank/id.co.bankbkemobile.digitalbank.heenses.ehseahn80026869
+
+premier_league:
+  - com.pl.premierleague/com.pulselive.premierleague25.main.MainActivity
+
+instant_gaming:
+  - com.instantgaming.android/com.instantgaming.android.classic_icon
+
+installerx:
+  - com.rosan.installer.x.revived/com.rosan.installer.ui.activity.SettingsActivity
+
+nothing_news:
+  - com.nothing.news/com.nothing.news.ui.AllNewsActivity
+
+tunedetective:
+  - com.dev.tunedetectivex/com.dev.tunedetectivex.AliasDefault
