--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,113 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+airnote:
+  - com.babelsoftware.airnote/com.babelsoftware.airnote.presentation.MainActivity
+
+alias_vault:
+  - net.aliasvault.app/net.aliasvault.app.MainActivity
+
+ambient_music:
+  - com.sourajitk.ambient_music/com.sourajitk.ambient_music.MainActivity
+
+app_lock_foss:
+  - dev.pranav.applock/dev.pranav.applock.MainActivity
+
+enigma_droid:
+  - io.github.deprec8.enigmadroid/io.github.deprec8.enigmadroid.MainActivity
+
+focus_foss:
+  - com.codecx.focus/com.codecx.focus.MainActivity
+
+jetbird:
+  - dev.bg.jetbird/dev.bg.jetbird.MainActivity
+
+launchpad:
+  - com.devrinth.launchpad/com.devrinth.launchpad.activities.LaunchpadOverlayActivity
+
+luci_mobile:
+  - com.cogwheel.LuCIMobile/com.cogwheel.LuCIMobile.MainActivity
+
+phylum:
+  - cloud.phylum.drive/cloud.phylum.drive.MainActivity
+
+privacium:
+  - com.kaleedtc.privacium/com.kaleedtc.privacium.MainActivity
+
+rv_kernel_manager:
+  - com.rve.rvkernelmanager/com.rve.rvkernelmanager.MainActivity
+
+tangential:
+  - com.grasstools.tangential/com.grasstools.tangential.MainActivity
+
+thor:
+  - com.valhalla.thor/com.valhalla.thor.HomeActivity
+
+tomato:
+  - org.nsh07.pomodoro/org.nsh07.pomodoro.MainActivity
+
+transport_you:
+  - net.youapps.transport/net.youapps.transport.MainActivity
+
+whisper_plus:
+  - org.woheller69.whisperplus/com.whisperonnx.MainActivity
+
+wiki_frontend:
+  - com.hicorenational.wikipedia/org.wikipedia.main.MainActivity
+
+ya_habit_tracker:
+  - com.zavedahmad.yaHabit/com.zavedahmad.yaHabit.RecipePickerActivity
+
+yeeemp:
+  - art.pegasko.yeeemp/art.pegasko.yeeemp.ui.activity.QueueListActivity
+
+androoster:
+  - com.andreacioccarelli.androoster/com.andreacioccarelli.androoster.ui.boot.UIBoot
+
+caffeinate_foss:
+  - com.hifnawy.caffeinate/com.hifnawy.caffeinate.view.MainActivity
+
+comaps:
+  - app.comaps.fdroid/app.organicmaps.DownloadResourcesActivity
+
+xmp_mod_player:
+  - org.helllabs.android.xmp/org.helllabs.android.xmp.browser.PlaylistMenu
+
+mcdonalds:
+  - il.co.inmanage.mcdonalds/il.co.inmanage.mcdonalds.activities.StartupActivity
+
+microsoft_edge:
+  - com.microsoft.emmx/com.microsoft.ruby.Main6
+
+antutu_benchmark:
+  - com.antutu.ABenchMark/com.android.module.app.ui.start.ABenchMarkStart
+
+gta_san_andreas:
+  - com.rockstargames.gtasa.de/com.epicgames.ue4.GameActivity
+
+coingecko:
+  - com.coingecko.coingeckoapp/com.coingecko.coingeckoapp.MainActivityDusk
+
+duolingo:
+  - com.duolingo/com.duolingo.app.PreStreakSaver4Launcher
+  - com.duolingo/com.duolingo.app.PreStreakSaver3Launcher
+  - com.duolingo/com.duolingo.app.PreStreakSaver2Launcher
+
+seabank:
+  - id.co.bankbkemobile.digitalbank/id.co.bankbkemobile.digitalbank.heenses.ehseahn80026869
+
+premier_league:
+  - com.pl.premierleague/com.pulselive.premierleague25.main.MainActivity
+
+instant_gaming:
+  - com.instantgaming.android/com.instantgaming.android.classic_icon
+
+installerx:
+  - com.rosan.installer.x.revived/com.rosan.installer.ui.activity.SettingsActivity
+
+nothing_news:
+  - com.nothing.news/com.nothing.news.ui.AllNewsActivity
+
+tunedetective:
+  - com.dev.tunedetectivex/com.dev.tunedetectivex.AliasDefault
