add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,24 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+dagens_nyheter:
+  - se.dn/se.dn.mobil.MainActivity
+
+nrk:
+  - no.nrk.mobil.app/no.nrk.mobil.app.activity.SplashScreenActivity
+
+nrk_radio:
+  - no.nrk.mobil.radio/no.nrk.mobil.radio.MainActivity
+
+nrk_tv:
+  - no.nrk.tv/no.nrk.tv.view.MobileSplashScreenActivity
+
+smhi_vader:
+  - se.smhi.mobile.android/se.smhi.app.smhi_weather_app.MainActivity
+
+sveriges_radio_play:
+  - se.sr.android/se.sr.android.app.boot.BootActivity
+
+svt_nyheter:
+  - se.svt.svti.android.nyhetsapp/se.svt.svti.android.nyhetsapp.view.activity.SplashScreen
