--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -33,3 +33,15 @@ sveriges_radio_play:
 
 svt_nyheter:
   - se.svt.svti.android.nyhetsapp/se.svt.svti.android.nyhetsapp.view.activity.SplashScreen
+
+youamp:
+  - ru.stersh.youamp/ru.stersh.youamp.MainActivity
+
+tiktok_lite:
+  - com.tiktok.lite.go/com.ss.android.ugc.aweme.main.homepage.MainActivity
+
+zedge:
+  - net.zedge.android/net.zedge.android.MainStPatricksDay
+
+uniqlo:
+  - com.uniqlo.ja.catalogue/com.uniqlo.ja.catalogue.view.mobile.home.DummyLauncherActivity
