--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,36 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+dagens_nyheter:
+  - se.dn/se.dn.mobil.MainActivity
+
+nrk:
+  - no.nrk.mobil.app/no.nrk.mobil.app.activity.SplashScreenActivity
+
+nrk_radio:
+  - no.nrk.mobil.radio/no.nrk.mobil.radio.MainActivity
+
+nrk_tv:
+  - no.nrk.tv/no.nrk.tv.view.MobileSplashScreenActivity
+
+smhi_vader:
+  - se.smhi.mobile.android/se.smhi.app.smhi_weather_app.MainActivity
+
+sveriges_radio_play:
+  - se.sr.android/se.sr.android.app.boot.BootActivity
+
+svt_nyheter:
+  - se.svt.svti.android.nyhetsapp/se.svt.svti.android.nyhetsapp.view.activity.SplashScreen
+
+youamp:
+  - ru.stersh.youamp/ru.stersh.youamp.MainActivity
+
+tiktok_lite:
+  - com.tiktok.lite.go/com.ss.android.ugc.aweme.main.homepage.MainActivity
+
+zedge:
+  - net.zedge.android/net.zedge.android.MainStPatricksDay
+
+uniqlo:
+  - com.uniqlo.ja.catalogue/com.uniqlo.ja.catalogue.view.mobile.home.DummyLauncherActivity
