new icon: 5ber.eSIM

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -45,3 +45,6 @@ zedge:
 
 uniqlo:
   - com.uniqlo.ja.catalogue/com.uniqlo.ja.catalogue.view.mobile.home.DummyLauncherActivity
+
+_5ber_esim:
+  - com.ifreegroup.moesim/com.ifreegroup.moesim.MainActivity
