new icon: Yandex.Shedevrum

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -48,3 +48,6 @@ uniqlo:
 
 _5ber_esim:
   - com.ifreegroup.moesim/com.ifreegroup.moesim.MainActivity
+
+yandex_shedevrum:
+  - com.yandex.shedevrus/com.yandex.shedevrus.LauncherDefault
