new icon: Russian Parking

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -51,3 +51,6 @@ _5ber_esim:
 
 yandex_shedevrum:
   - com.yandex.shedevrus/com.yandex.shedevrus.LauncherDefault
+
+russian_parking:
+  - ru.mosparking.appnew/ru.parking.featuresplash.internal.presentation.view.SplashActivity
