new icon: Mnogo Lososya

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -54,3 +54,6 @@ yandex_shedevrum:
 
 russian_parking:
   - ru.mosparking.appnew/ru.parking.featuresplash.internal.presentation.view.SplashActivity
+
+mnogo_lososya:
+  - com.thapl.ml/com.thapl.ml.ui.MainActivity
