new icon: Perekrestok Vprok

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -57,3 +57,6 @@ russian_parking:
 
 mnogo_lososya:
   - com.thapl.ml/com.thapl.ml.ui.MainActivity
+
+perekrestok_vprok:
+  - ru.x5.perekrestok.darkstore/ru.perekrestok.store.features.mainactivity.MainActivity
