new icon: X5 Rooms

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -60,3 +60,6 @@ mnogo_lososya:
 
 perekrestok_vprok:
   - ru.x5.perekrestok.darkstore/ru.perekrestok.store.features.mainactivity.MainActivity
+
+x5_rooms:
+  - ru.x5.rooms/ru.unlimitedtech.express.ui.screens.splash_screen.SplashActivity
