new icon: X5 Key

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -63,3 +63,6 @@ perekrestok_vprok:
 
 x5_rooms:
   - ru.x5.rooms/ru.unlimitedtech.express.ui.screens.splash_screen.SplashActivity
+
+x5_key:
+  - ru.x5.key/ru.x5.key.MainActivity
