new stuff (premium requests) (#1231)
* new icon: 5ber.eSIM

* new icon: Yandex.Shedevrum

* new icon: Russian Parking

* new icon: Mnogo Lososya

* new icon: Perekrestok Vprok

* new icon: X5 Rooms

* new icon: X5 Key

* new icon: X5 Sphere

* new icon: X5 Food

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -45,3 +45,30 @@ zedge:
 
 uniqlo:
   - com.uniqlo.ja.catalogue/com.uniqlo.ja.catalogue.view.mobile.home.DummyLauncherActivity
+
+_5ber_esim:
+  - com.ifreegroup.moesim/com.ifreegroup.moesim.MainActivity
+
+yandex_shedevrum:
+  - com.yandex.shedevrus/com.yandex.shedevrus.LauncherDefault
+
+russian_parking:
+  - ru.mosparking.appnew/ru.parking.featuresplash.internal.presentation.view.SplashActivity
+
+mnogo_lososya:
+  - com.thapl.ml/com.thapl.ml.ui.MainActivity
+
+perekrestok_vprok:
+  - ru.x5.perekrestok.darkstore/ru.perekrestok.store.features.mainactivity.MainActivity
+
+x5_rooms:
+  - ru.x5.rooms/ru.unlimitedtech.express.ui.screens.splash_screen.SplashActivity
+
+x5_key:
+  - ru.x5.key/ru.x5.key.MainActivity
+
+x5_sphere:
+  - ru.x5.sphere/ru.x5.sphere.MainActivity
+
+x5_food:
+  - ru.x5.foodru.rs/ru.x5.food.MainActivity
