add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -72,3 +72,51 @@ x5_sphere:
 
 x5_food:
   - ru.x5.foodru.rs/ru.x5.food.MainActivity
+
+philips_airplus:
+  - com.philips.ph.homecare/com.philips.ph.homecare.MainActivity
+
+philips_baby_monitor_plus:
+  - com.philips.ph.babymonitorplus/com.smart.ThingSplashActivity
+
+philips_entertainment:
+  - com.tpvision.philipshe/com.tpvision.philipshe.Activitys.LaunchScreenActivity
+
+philips_groomtribe:
+  - com.philips.vitaskin.male/com.philips.d2cmobile.app.MainActivity
+
+philips_headphones:
+  - com.tpvison.headphone/com.tpvison.headphone.activity.initialpage.LaunchPageActivity
+
+philips_homeid:
+  - com.philips.ka.oneka.app/com.philips.ka.oneka.app.ui.splash.SplashActivity
+
+philips_homerun_robot:
+  - com.philips.da.philipsrobot/com.smart.ThingSplashActivity
+
+philips_home_safety:
+  - com.versuni.homesafety/com.versuni.homesafety.features.splash.SplashActivity
+
+philips_lumea_ipl:
+  - com.philips.platform.lumea/com.philips.platform.lumea.activity.HomeActivity
+
+philips_oneblade:
+  - com.philips.d2cmobile/com.philips.d2cmobile.app.MainActivity
+
+philips_pet_series:
+  - com.versuni.nbx.petsseries/com.versuni.petsseries.features.splash.SplashActivity
+
+philips_sleepmapper:
+  - com.philips.src.hss/com.philips.cdp2.powersleep.splash.MainActivity
+
+philips_smart_tv:
+  - com.tpvision.philipstvapp2/com.tpvision.philipstvapp2.UI.SplashScreen
+
+philips_sonicare:
+  - com.philips.cdp.ohc.tuscany/com.philips.cdp.ohc.tuscany.splash_screen.SplashScreenActivity
+
+philips_sonicare_for_kids:
+  - com.philips.sonicare4kids/com.philips.sonicare4kids.activities.OBBActivity
+
+prequel_ai_filter:
+  - com.prequel.app/com.prequel.app.DefaultIconAlias
