--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -120,3 +120,12 @@ philips_sonicare_for_kids:
 
 prequel_ai_filter:
   - com.prequel.app/com.prequel.app.DefaultIconAlias
+
+dashy_mobile:
+  - com.example.dashymobile/com.example.dashymobile.MainActivity
+
+hidroly:
+  - com.om1cael.hidroly/com.om1cael.hidroly.MainActivity
+
+lumo:
+  - me.proton.android.lumo/me.proton.android.lumo.MainActivity
