--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -129,3 +129,12 @@ hidroly:
 
 lumo:
   - me.proton.android.lumo/me.proton.android.lumo.MainActivity
+
+brimo:
+  - id.co.bri.brimo/id.co.bri.brimo.DefaultIcon
+
+punishing_gray_raven:
+  - com.kurogame.gplay.punishing.grayraven.en/com.kuro.hgsdk.SplashActivity
+
+duolingo:
+  - com.duolingo/com.duolingo.app.StreakSaverLauncherEmojiQuestionMark
