add icons, premium requests

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,22 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+
+cloud_pbx:
+  - com.telekom.cloudpbx/com.webex.teams.WebexLauncherActivity
+
+em_client:
+  - com.emclient.mailclient/com.emclient.mailclient.mainlauncher
+
+goat_simulator_3:
+  - com.coffeestain.goatsimulator3/com.epicgames.ue4.GameActivity
+
+jlab:
+  - com.jlab.app/com.provista.jlab.SplashActivity
+
+resprite:
+  - com.fengeon.resprite_desktop/com.fengeon.resprite_desktop.MainActivity
+
+sonic_triple_trouble_16_bit:
+  - com.noahncopeland.game/com.noahncopeland.game.RunnerActivity
