--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -31,3 +31,12 @@ resprite:
 
 sonic_triple_trouble_16_bit:
   - com.noahncopeland.game/com.noahncopeland.game.RunnerActivity
+
+athena:
+  - com.kin.athena/com.kin.athena.presentation.MainActivity
+
+nothing_k:
+  - com.nothingsecure/com.nothingsecure.RegisterActivity
+
+proton_authenticator:
+  - proton.android.authenticator/proton.android.authenticator.app.ui.MainActivity
