--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -32,7 +32,7 @@ resprite:
 sonic_triple_trouble_16_bit:
   - com.noahncopeland.game/com.noahncopeland.game.RunnerActivity
 
-athena:
+athena_firewall:
   - com.kin.athena/com.kin.athena.presentation.MainActivity
 
 nothing_k:
@@ -40,3 +40,18 @@ nothing_k:
 
 proton_authenticator:
   - proton.android.authenticator/proton.android.authenticator.app.ui.MainActivity
+
+ex_file_manager:
+  - com.ace.ex.file.manager/com.ace.fileexplorer.feature.activity.AceFirstActivity
+
+galicia:
+  - com.mosync.app_Banco_Galicia/ar.com.galicia.core.ui.splash.SplashActivity
+
+weather_master:
+  - com.pranshulgg.weather_master_app/com.pranshulgg.weather_master_app.MainActivity
+
+zeel_walls:
+  - app.yog.zeelwalls/app.yog.zeelwalls.MainActivity
+
+my_porsche:
+  - de.porsche.one/de.porsche.product.MainActivity
