--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -55,3 +55,27 @@ zeel_walls:
 
 my_porsche:
   - de.porsche.one/de.porsche.product.MainActivity
+
+finn_no:
+  - no.finn.android/com.schibsted.nmp.NmpActivity
+
+windy:
+  - com.windyty.android/com.windyty.android.Standard
+
+pepper:
+  - com.tippingcanoe.pepperpl/com.pepper.apps.android.presentation.MainActivityDarkIcon
+
+file_navigator:
+  - com.w2sv.filenavigator/com.w2sv.filenavigator.ui.MainActivity
+
+paramount_plus:
+  - com.cbs.ca/com.paramount.android.pplus.features.splash.mobile.integration.SplashActivity
+
+marvel_snap:
+  - com.nvsgames.snap/com.seconddinner.snap.player.CubePlayerActivity
+
+dolby_atmos:
+  - com.atmos/com.atmos.ds1appUI.MainActivity
+
+opentracks:
+  - de.dennisguse.opentracks.playstore/de.dennisguse.opentracks.introduction.IntroductionActivity
