add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,19 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+
+bfcu:
+  - com.borderfcu.bordermobile/com.cuinterface.dpdroidcore.lib.LoginActivity
+
+hatsune_miku_logic_paint:
+  - jp.co.crypton.library/com.unity3d.player.UnityPlayerActivity
+
+hatsune_miku_voice_alarm:
+  - com.moriya_sys.vocaloid_alarm/com.moriya_sys.vocaloid_alarm.activity.MainActivity
+
+miku_ar_camera:
+  - com.sorasu.armiku/com.unity3d.player.UnityPlayerActivity
+
+screenstream:
+  - info.dvkr.screenstream/info.dvkr.screenstream.SingleActivity
