--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -13,7 +13,6 @@
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
 
-
 bfcu:
   - com.borderfcu.bordermobile/com.cuinterface.dpdroidcore.lib.LoginActivity
 
@@ -28,3 +27,6 @@ miku_ar_camera:
 
 screenstream:
   - info.dvkr.screenstream/info.dvkr.screenstream.SingleActivity
+
+plus_plus_battery:
+  - com.dijia1124.plusplusbattery/com.dijia1124.plusplusbattery.MainActivity
