--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -30,3 +30,12 @@ screenstream:
 
 plus_plus_battery:
   - com.dijia1124.plusplusbattery/com.dijia1124.plusplusbattery.MainActivity
+
+anker:
+  - com.anker.charging/com.anker.charging.MainActivity
+
+opera:
+  - com.opera.browser/com.opera.Launcher3
+
+uma_musume:
+  - com.cygames.umamusume/jp.co.cygames.umamusume_activity.UmamusumeActivity
