Add icons&compinfo (#1234)
* small fixes

* add icons, premium request

* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,30 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+bfcu:
+  - com.borderfcu.bordermobile/com.cuinterface.dpdroidcore.lib.LoginActivity
+
+hatsune_miku_logic_paint:
+  - jp.co.crypton.library/com.unity3d.player.UnityPlayerActivity
+
+hatsune_miku_voice_alarm:
+  - com.moriya_sys.vocaloid_alarm/com.moriya_sys.vocaloid_alarm.activity.MainActivity
+
+miku_ar_camera:
+  - com.sorasu.armiku/com.unity3d.player.UnityPlayerActivity
+
+screenstream:
+  - info.dvkr.screenstream/info.dvkr.screenstream.SingleActivity
+
+plus_plus_battery:
+  - com.dijia1124.plusplusbattery/com.dijia1124.plusplusbattery.MainActivity
+
+anker:
+  - com.anker.charging/com.anker.charging.MainActivity
+
+opera:
+  - com.opera.browser/com.opera.Launcher3
+
+uma_musume:
+  - com.cygames.umamusume/jp.co.cygames.umamusume_activity.UmamusumeActivity
