--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -129,3 +129,9 @@ speech_bubbles:
 
 techmanager:
   - de.wertgarantie.techmanager/de.wertgarantie.techmanager.MainActivity
+
+permissions_summary:
+  - com.simpol.permissionssummary/com.simpol.permissionssummary.MainActivity
+
+simple_xray:
+  - com.simplexray.an/com.simplexray.an.activity.MainActivity
