--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -135,3 +135,6 @@ permissions_summary:
 
 simple_xray:
   - com.simplexray.an/com.simplexray.an.activity.MainActivity
+
+skit:
+  - com.pavelrekun.skit/com.pavelrekun.skit.navigation.NavigationActivity
