--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,40 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+
+adobe_photoshop_beta:
+  - com.adobe.photoshop.retail/com.adobe.photoshop.MainActivity
+
+anikku:
+  - app.anikku/eu.kanade.tachiyomi.ui.main.MainActivity
+
+clockify:
+  - me.clockify.android/me.clockify.android.presenter.screens.main.MainActivity
+
+dsb:
+  - dk.dsb.nda.android/dk.dsb.nda.core.MainActivity
+
+herkul:
+  - org.herkul/org.herkul.MainActivity
+
+kakuyomu:
+  - jp.kadokawa.el.kakuyomu/jp.kadokawa.el.kakuyomu.activity.RootActivity
+
+libro_fm:
+  - fm.libro.librofm/fm.libro.presentation.screens.MainActivity.default
+
+maicoin:
+  - com.maicoin.maicoin/com.maicoin.maicoin.MainActivity
+
+my_tello:
+  - com.tello.ui/com.keepcalling.ui.MainActivity
+
+netcraze:
+  - ru.netcraze.app/com.ndmsystems.knext.ui.refactored.startScreen.StartScreenActivity
+
+touch_hle:
+  - org.touchhle.android/org.touchhle.android.MainActivity
+
+ugreen_nas:
+  - com.ugreen.pro/com.ugreen.pro.ui.Splash
