--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -76,3 +76,12 @@ line_bank:
 
 neotaste:
   - app.foodisto.foodisto/app.neotaste.ui.NeoTasteActivity
+
+mosmetro:
+  - ru.mosmetro.metro/ru.mosmetro.metro.activity.MainActivity
+
+tele2_ru:
+  - ru.tele2.mytele2/ru.tele2.mytele2.presentation.splash.SplashActivity
+
+motiv:
+  - ru.filit.motiv.app/ru.filit.motiv.app.preAuth.ui.SplashScreen
