new icon: Uralsbyt

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -85,3 +85,6 @@ tele2_ru:
 
 motiv:
   - ru.filit.motiv.app/ru.filit.motiv.app.preAuth.ui.SplashScreen
+
+uralsbyt:
+  - ru.ues.users_personal_account/ru.ues.users_personal_account.MainActivity
