new icon: OTP Bank

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -88,3 +88,6 @@ motiv:
 
 uralsbyt:
   - ru.ues.users_personal_account/ru.ues.users_personal_account.MainActivity
+
+otp_bank:
+  - ru.otpbank.mobile/ru.otpbank.mobile.presentation.activity.AppActivity
