new icon: Lemana

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -91,3 +91,6 @@ uralsbyt:
 
 otp_bank:
   - ru.otpbank.mobile/ru.otpbank.mobile.presentation.activity.AppActivity
+
+lemana:
+  - ru.leroymerlin.mobile/ru.leroymerlin.mobile.presentation.features.app.AppActivity
