new icon: Gosuslugi POS

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -94,3 +94,6 @@ otp_bank:
 
 lemana:
   - ru.leroymerlin.mobile/ru.leroymerlin.mobile.presentation.features.app.AppActivity
+
+gosuslugi_pos:
+  - ru.gosuslugi.pos/com.luxoft.resident.ui.activities.SplashActivity
