new icon: Autodoc

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -97,3 +97,6 @@ lemana:
 
 gosuslugi_pos:
   - ru.gosuslugi.pos/com.luxoft.resident.ui.activities.SplashActivity
+
+autodoc:
+  - ru.autodoc.autodocapp/ru.autodoc.autodocapp.modules.main.login.ui.login_activity.LoginActivity
