new icon: Wildberries Courier

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -100,3 +100,6 @@ gosuslugi_pos:
 
 autodoc:
   - ru.autodoc.autodocapp/ru.autodoc.autodocapp.modules.main.login.ui.login_activity.LoginActivity
+
+wildberries_courier:
+  - ru.wb.courier/ru.wb.courier._solid.ui.activity.CheckPermissionsActivity
