--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -103,3 +103,18 @@ autodoc:
 
 wildberries_courier:
   - ru.wb.courier/ru.wb.courier._solid.ui.activity.CheckPermissionsActivity
+
+cna:
+  - com.channelnewsasia/com.channelnewsasia.ui.MainActivity
+
+hay:
+  - com.hay.app/com.hay.app.MainActivity
+
+kinestop:
+  - com.urbandroid.kinestop/com.urbandroid.kinestop.MainActivity
+
+kris_plus:
+  - com.sia.krispay.customer/com.sia.krispay.customer.ui.splash.NewActivity
+
+mind_space:
+  - com.oplus.aimemory/com.oplus.aimemory.MainActivity
