--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -98,7 +98,7 @@ lemana:
 gosuslugi_pos:
   - ru.gosuslugi.pos/com.luxoft.resident.ui.activities.SplashActivity
 
-autodoc:
+autodoc_ru:
   - ru.autodoc.autodocapp/ru.autodoc.autodocapp.modules.main.login.ui.login_activity.LoginActivity
 
 wildberries_courier:
