--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -76,3 +76,45 @@ line_bank:
 
 neotaste:
   - app.foodisto.foodisto/app.neotaste.ui.NeoTasteActivity
+
+mosmetro:
+  - ru.mosmetro.metro/ru.mosmetro.metro.activity.MainActivity
+
+tele2_ru:
+  - ru.tele2.mytele2/ru.tele2.mytele2.presentation.splash.SplashActivity
+
+motiv:
+  - ru.filit.motiv.app/ru.filit.motiv.app.preAuth.ui.SplashScreen
+
+uralsbyt:
+  - ru.ues.users_personal_account/ru.ues.users_personal_account.MainActivity
+
+otp_bank:
+  - ru.otpbank.mobile/ru.otpbank.mobile.presentation.activity.AppActivity
+
+lemana:
+  - ru.leroymerlin.mobile/ru.leroymerlin.mobile.presentation.features.app.AppActivity
+
+gosuslugi_pos:
+  - ru.gosuslugi.pos/com.luxoft.resident.ui.activities.SplashActivity
+
+autodoc_ru:
+  - ru.autodoc.autodocapp/ru.autodoc.autodocapp.modules.main.login.ui.login_activity.LoginActivity
+
+wildberries_courier:
+  - ru.wb.courier/ru.wb.courier._solid.ui.activity.CheckPermissionsActivity
+
+cna:
+  - com.channelnewsasia/com.channelnewsasia.ui.MainActivity
+
+hay:
+  - com.hay.app/com.hay.app.MainActivity
+
+kinestop:
+  - com.urbandroid.kinestop/com.urbandroid.kinestop.MainActivity
+
+kris_plus:
+  - com.sia.krispay.customer/com.sia.krispay.customer.ui.splash.NewActivity
+
+mind_space:
+  - com.oplus.aimemory/com.oplus.aimemory.MainActivity
