new 6 premium request icons

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -118,3 +118,21 @@ kris_plus:
 
 mind_space:
   - com.oplus.aimemory/com.oplus.aimemory.MainActivity
+
+autozone:
+  - com.autozone.mobile/com.autozone.mobile.MainActivity
+
+better_buzz:
+  - com.betterbuzzcoffee.app/com.punchhapp.MainActivity
+
+notes_pin:
+  - com.shubham.notes/com.shubham.notes.ui.Activities.startup.FirstPage
+
+packmate:
+  - com.ouji.packmate/com.ouji.packmate.MainActivity
+
+hims:
+  - com.himshers.hims/com.himshers.MainActivity
+
+large_text_signboard:
+  - io.bloco.largetext/io.bloco.largetext.presentation.main.MainActivity
