--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -61,3 +61,39 @@ tiefprompt:
 
 track_my_stack:
   - beeblesoft.trackmystack.android/crc648cfa96d710debedc.MainActivity
+
+edge:
+  - net.mobigame.edge/net.mobigame.edge.EdgeActivity
+
+uniqlo:
+  - com.uniqlo.usa.catalogue/com.uniqlo.ja.catalogue.view.mobile.home.DummyLauncherActivity
+
+microsoft_edge:
+  - com.microsoft.emmx/com.microsoft.ruby.Main1
+
+overmorrow:
+  - com.marotidev.Overmorrow/com.marotidev.overmorrow.MainActivity
+
+ing:
+  - it.ing.banking/com.ing.banking.framework.features.welcome.WelcomeActivity
+
+my_verizon:
+  - com.vzw.hss.myverizon/com.vzw.mobilefirst.setup.views.activity.SetUpActivity
+
+jbl_headphones:
+  - jbl.stc.com/jbl.stc.com.activity.LauncherStartActivity
+
+tick__tick:
+  - com.ticktick.task/com.ticktick.task.HomeAlia_4
+
+wikipedia:
+  - org.wikipedia.alpha/org.wikipedia.main.MainActivity
+
+dolby_atmos:
+  - co.aospa.dolby.oplus/co.aospa.dolby.oplus.DolbyActivity
+
+cemu:
+  - info.cemu.cemu/info.cemu.cemu.MainActivity
+
+google_cloud_console:
+  - com.google.android.apps.cloudconsole/com.google.android.apps.cloudconsole.common.ExternalMainContainerActivity
