Add icons&compinfo (#1242)
* add icons

* add componentinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,88 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+
+abiapp_net:
+  - net.abiapp.android/net.abiapp.android.frontend.MainActivity
+
+acnh_pocket_guide:
+  - com.acnh.pocket_guide/com.acnh.pocket_guide.MainActivity
+
+conduit:
+  - app.cogwheel.conduit/app.cogwheel.conduit.MainActivity
+
+krombacher:
+  - de.krombacher.krombacherplusapp/de.krombacher.krombacherplusapp.MainActivity
+
+neo_stumbler:
+  - xyz.malkki.neostumbler/xyz.malkki.neostumbler.MainActivity
+
+omron_connect:
+  - com.omronhealthcare.omronconnect/com.omronhealthcare.foresight.view.module.splash.SplashActivity
+
+party_up:
+  - me.ocv.partyup/me.ocv.partyup.MainActivity
+
+pretixpos:
+  - eu.pretix.pretixpos/eu.pretix.pretixpos.ui.MainActivity
+
+pretixscan:
+  - eu.pretix.pretixscan.droid/eu.pretix.pretixscan.droid.ui.MainActivity
+
+pulse_for_umami:
+  - com.sleepingpanda.pulse/com.sleepingpanda.pulse.MainActivity
+
+rausgegangen:
+  - com.codekarussell.rausgegangen/com.codekarussell.rausgegangen.MainActivity
+
+revcel:
+  - com.revcel.mobile/com.revcel.mobile.MainActivity
+
+serengeti_park:
+  - de.serengetipark.app/com.unity3d.player.UnityPlayerActivity
+
+sparky_fitness:
+  - com.sparkyfitness/com.sparkyfitness.MainActivity
+
+tiefprompt:
+  - io.github.tiefseetauchner.tiefprompt/io.github.tiefseetauchner.tiefprompt.MainActivity
+
+track_my_stack:
+  - beeblesoft.trackmystack.android/crc648cfa96d710debedc.MainActivity
+
+edge:
+  - net.mobigame.edge/net.mobigame.edge.EdgeActivity
+
+uniqlo:
+  - com.uniqlo.usa.catalogue/com.uniqlo.ja.catalogue.view.mobile.home.DummyLauncherActivity
+
+microsoft_edge:
+  - com.microsoft.emmx/com.microsoft.ruby.Main1
+
+overmorrow:
+  - com.marotidev.Overmorrow/com.marotidev.overmorrow.MainActivity
+
+ing:
+  - it.ing.banking/com.ing.banking.framework.features.welcome.WelcomeActivity
+
+my_verizon:
+  - com.vzw.hss.myverizon/com.vzw.mobilefirst.setup.views.activity.SetUpActivity
+
+jbl_headphones:
+  - jbl.stc.com/jbl.stc.com.activity.LauncherStartActivity
+
+tick__tick:
+  - com.ticktick.task/com.ticktick.task.HomeAlia_4
+
+wikipedia:
+  - org.wikipedia.alpha/org.wikipedia.main.MainActivity
+
+dolby_atmos:
+  - co.aospa.dolby.oplus/co.aospa.dolby.oplus.DolbyActivity
+
+cemu:
+  - info.cemu.cemu/info.cemu.cemu.MainActivity
+
+google_cloud_console:
+  - com.google.android.apps.cloudconsole/com.google.android.apps.cloudconsole.common.ExternalMainContainerActivity
