--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+yatri_sathi:
+  - in.juspay.jatrisaathi/in.juspay.mobility.MainActivity
