added 1 new compinfo

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+currency_converter:
+    - com.mezhevikin.converter/com.mezhevikin.converter.activities.ConverterActivity
