add icons, premium request

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,15 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+converge_gofiber:
+  - com.convergeict.gofiber/com.convergeict.gofiber.MainActivity
+
+dragonfi:
+  - com.dragonfisecurities.dragonfi/com.dragonfisecurities.dragonfi.MainActivity
+
+gotyme_bank:
+  - ph.com.gotyme/com.tymex.splashScreen.resources.Default
+
+linear:
+  - app.linear/app.linear.Launcher
