--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -32,3 +32,12 @@ google_password_manager:
   category: 'Google'
   compinfos:
     - com.google.android.apps.credentialmanager/com.google.android.apps.credentialmanager.launcher.LauncherActivity
+
+tiktok_lite:
+  - com.ss.android.ugc.tiktok.lite/com.ss.android.ugc.aweme.splash.SplashActivity
+
+clash_meta:
+  - com.github.metacubex.clash.meta/com.github.kr328.clash.MainActivityAlias
+
+quillpad:
+  - io.github.quillpad/org.qosp.notes.ui.launcher.LauncherActivity
