Add icons&compinfo (#1245)
* add icons, premium request

* add icons

* add componentinfo

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,32 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+converge_gofiber:
+  - com.convergeict.gofiber/com.convergeict.gofiber.MainActivity
+
+dragonfi:
+  - com.dragonfisecurities.dragonfi/com.dragonfisecurities.dragonfi.MainActivity
+
+gotyme_bank:
+  - ph.com.gotyme/com.tymex.splashScreen.resources.Default
+
+linear:
+  - app.linear/app.linear.Launcher
+
+bily:
+  - com.bily/com.bily.MainActivity
+
+google_password_manager:
+  category: 'Google'
+  compinfos:
+    - com.google.android.apps.credentialmanager/com.google.android.apps.credentialmanager.launcher.LauncherActivity
+
+tiktok_lite:
+  - com.ss.android.ugc.tiktok.lite/com.ss.android.ugc.aweme.splash.SplashActivity
+
+clash_meta:
+  - com.github.metacubex.clash.meta/com.github.kr328.clash.MainActivityAlias
+
+quillpad:
+  - io.github.quillpad/org.qosp.notes.ui.launcher.LauncherActivity
