added 1 new icon (#1244)
* add 1 new icon

* added 1 new compinfo

---------

Co-authored-by: Gitro <108683123+GitGitro@users.noreply.github.com>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -13,6 +13,9 @@
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
 
+currency_converter:
+    - com.mezhevikin.converter/com.mezhevikin.converter.activities.ConverterActivity
+
 converge_gofiber:
   - com.convergeict.gofiber/com.convergeict.gofiber.MainActivity
 
