--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -13,6 +13,9 @@
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
 
+yatri_sathi:
+  - in.juspay.jatrisaathi/in.juspay.mobility.MainActivity
+
 currency_converter:
     - com.mezhevikin.converter/com.mezhevikin.converter.activities.ConverterActivity
 
