Add 9 app icons & Update icons.yml
- DAISO
- Kura Sushi
- ListeningTrainer
- PokePay
- povo 2.0
- Sumire Keyboard
- MoeKey
- Radiko
- univ. CO-OP

- My Rakuten Mobile
- Rakuten Travel

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -47,3 +47,36 @@ clash_meta:
 
 quillpad:
   - io.github.quillpad/org.qosp.notes.ui.launcher.LauncherActivity
+
+daiso:
+  - com.daisojapan/com.locationvalue.ma2.app.SplashActivity
+
+kura_sushi:
+  - jp.co.kura_corpo/jp.co.kura_corpo.SplashActivity
+
+listeningtrainer:
+  - com.asahipress.ListeningTrainer/com.asahipress.listening_trainer.activity.SplashActivity
+
+pokepay:
+  - jp.pokepay.app/jp.pokepay.app.MainActivity
+
+povo_2:
+  - com.kddi.kdla.jp/com.circles.selfcare.v2.splash.LaunchActivity
+
+sumire_keyboard:
+  - com.kazumaproject.markdownhelperkeyboard/com.kazumaproject.markdownhelperkeyboard.setting_activity.MainActivity
+
+moekey:
+  - love.moegirl.moekey/love.moegirl.moekey.MainActivity
+
+radiko:
+  - jp.radiko.Player/jp.radiko.player.MainActivity
+
+univ_coop:
+  - jp.coremobile.daigaku/jp.coremobile.daigaku.MainActivity
+
+my_rakuten_mobile:
+  - jp.co.rakuten.mobile.ecare/jp.co.rakuten.mobile.ecare.MainActivity
+
+rakuten_travel:
+  - jp.co.rakuten.travel.andro/jp.co.rakuten.travel.andro.MainActivity
