--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -125,3 +125,24 @@ tata_neu:
 
 _999_md:
   - md.simpals.app999/md.simpals.app999.MainActivity
+
+rethink_dns:
+  - com.celzero.bravedns/com.celzero.bravedns.ui.activity.LauncherAliasAppLock
+
+stocks_widget:
+  - com.github.premnirmal.tickerwidget/com.github.premnirmal.ticker.home.HomeActivity
+
+sheetz:
+  - com.ust.sheetzretapp/com.sheetz.consumermobile.login.ui.SplashActivity
+
+dailymotion:
+  - com.dailymotion.dailymotion/com.dailymotion.dailymotion.ui.activity.LandingActivity
+
+eventbrite:
+  - com.eventbrite.attendee/com.eventbrite.attendee.legacy.activities.InnerMainActivity$MainActivity
+
+_9292:
+  - nl.negentwee/nl.negentwee.ui.MainActivity
+
+bhim:
+  - in.org.npci.upiapp/ikrvqi.t
