Add icons&compinfo (#1247)
* add icons

* add componentinfo

* final attempt to fix #1235

* add icons

* small fix

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -17,7 +17,7 @@ yatri_sathi:
   - in.juspay.jatrisaathi/in.juspay.mobility.MainActivity
 
 currency_converter:
-    - com.mezhevikin.converter/com.mezhevikin.converter.activities.ConverterActivity
+  - com.mezhevikin.converter/com.mezhevikin.converter.activities.ConverterActivity
 
 converge_gofiber:
   - com.convergeict.gofiber/com.convergeict.gofiber.MainActivity
@@ -80,3 +80,69 @@ my_rakuten_mobile:
 
 rakuten_travel:
   - jp.co.rakuten.travel.andro/jp.co.rakuten.travel.andro.MainActivity
+
+blood_donor:
+  - com.cube.arc.blood/com.cube.arc.blood.BootActivity
+
+draw_anywhere:
+  - com.shezik.drawanywhere/com.shezik.drawanywhere.MainActivity
+
+exploding_kittens_2:
+  - com.marmalade.explodingkittens/com.google.firebase.MessagingUnityPlayerActivity
+
+flicky:
+  - app.flicky/app.flicky.MainActivity
+
+garmin_golf:
+  - com.garmin.android.apps.golf/com.garmin.android.apps.golf.ui.activities.StartupActivity
+
+hollister:
+  - com.abercrombie.hollister/com.abercrombie.abercrombie.ui.splash.SplashScreenActivity
+
+jolt_phone:
+  - com.icubeaccess.phoneapp/com.icubeaccess.phoneapp.DefaultIcon
+
+nooie:
+  - com.nooie.home/com.yrcx.xuser.ui.activity.YRSplashActivity
+
+offline_translator:
+  - dev.davidv.translator/dev.davidv.translator.MainActivity
+
+opendns_updater:
+  - fr.guillaumevillena.opendnsupdater/fr.guillaumevillena.opendnsupdater.activity.MainActivity
+
+reef:
+  - dev.pranav.reef/dev.pranav.reef.MainActivity
+
+shelly_smart_control:
+  - cloud.shelly.smartcontrol/cloud.shelly.smartcontrol.activities.MainActivity
+
+squire:
+  - com.getsquire.flagship/com.getsquire.squire.android.main.MainActivityAliasFlagship
+
+tata_neu:
+  - com.tatadigital.tcp/com.tatadigital.tcp.MainActivity
+
+_999_md:
+  - md.simpals.app999/md.simpals.app999.MainActivity
+
+rethink_dns:
+  - com.celzero.bravedns/com.celzero.bravedns.ui.activity.LauncherAliasAppLock
+
+stocks_widget:
+  - com.github.premnirmal.tickerwidget/com.github.premnirmal.ticker.home.HomeActivity
+
+sheetz:
+  - com.ust.sheetzretapp/com.sheetz.consumermobile.login.ui.SplashActivity
+
+dailymotion:
+  - com.dailymotion.dailymotion/com.dailymotion.dailymotion.ui.activity.LandingActivity
+
+_9292:
+  - nl.negentwee/nl.negentwee.ui.MainActivity
+
+bhim:
+  - in.org.npci.upiapp/ikrvqi.t
+
+fluffy:
+  - app.fluffy/app.fluffy.MainActivity
