Add 2 app icons
- おサイフケータイ (as "Osaifu Keitai")
- Rakuten Drive

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,8 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+osaifu_keitai:
+  - com.felicanetworks.mfm.main/com.felicanetworks.mfm.main.ServiceListActivity
+rakuten_drive:
+  - com.estmob.android.sendy.app/com.estmob.android.sendy.app.ui.main.MainActivity
