Fix icon for pixel tips

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -12,3 +12,6 @@
 #   category: Google
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
+
+pixel_tips:
+  - com.google.android.apps.tips/com.google.android.apps.tips.fortnite.base
