Fix icon for pixel tips (#1249)
Co-authored-by: Evgeny <mail@hexed.pw>

--- a/contribs/icons.yml
+++ b/contribs/icons.yml
@@ -13,7 +13,12 @@
 #   compinfos:
 #     - com.google.app/com.google.app.MainActivity
 
+pixel_tips:
+  - com.google.android.apps.tips/com.google.android.apps.tips.fortnite.base
+
 osaifu_keitai:
   - com.felicanetworks.mfm.main/com.felicanetworks.mfm.main.ServiceListActivity
+
 rakuten_drive:
   - com.estmob.android.sendy.app/com.estmob.android.sendy.app.ui.main.MainActivity
+
